# proconlib

./: .gitignore  Cargo.toml
.github/workflows/: rust.yml
src/: arena_slices.rs  array_vec.rs  binary_trie.rs  bipartite_matching.rs  bisect.rs  bits.rs  bitset.rs  bounded.rs  bytes_pool.rs  cht.rs  cmat.rs  complex.rs  coord_comp.rs  counter.rs  d2.rs  d3.rs  dft.rs  dft2.rs  dijkstra.rs  disjoint_sparse_table.rs  dsu.rs  experimental.rs  f2.rs  fact.rs  factorize.rs  fenwick_tree.rs  float.rs  graph.rs  graph2.rs  graph3.rs  hld.rs  input.rs  input2.rs  int.rs  kd_tree.rs  kmp.rs  lazy_seg_tree.rs  li_chao.rs  lib.rs  light_vec.rs  (+34 more)
src/bench/: barrett.rs  gcd.rs  input2.rs  light_vec.rs  mod.rs  mod_int_vector.rs
src/experimental/: lazy_segtree.rs  matrix.rs  rbst.rs  smallrng.rs
src/random/: pcg.rs  xoshiro.rs
src/tests/: bits.rs  d2.rs  d3.rs  dsu.rs  experimental.rs  f2.rs  float.rs  input.rs  input2.rs  int.rs  kmp.rs  light_vec.rs  modint_poly.rs  rational.rs  rbstree.rs  segtree.rs  trie.rs
src/tests/experimental/: matrix.rs
src/tests/trie/: aho_corasick.rs
src/trie/: aho_corasick.rs
